<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/bannerRegister"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/banner_register"
        android:tint="@color/teal_700" />

    <TextView
        android:id="@+id/headerRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now_for_free"
        android:layout_below="@id/bannerRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/teal_700"
        />

    <LinearLayout
        android:id="@+id/registerFormInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/headerRegister"
        >

        <EditText
            android:id="@+id/editTextRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/input_name"/>

        <EditText
            android:id="@+id/editTextRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/input_email"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="center"
            android:text="@string/text_login"
            android:textColor="#4042DA"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>